# glib-lsp

./: README.md  main.go  meson.build  setup.rpc
src/: main.c  meson.build  message.c  message.h  parse_utils.c  parse_utils.h  parser.c  parser.h  process_asserts.c  process_asserts.h  process_comments.c  process_comments.h  process_init.c  process_init.h  process_midscope.c  process_midscope.h  processor.c  processor.h  rpc.c  rpc.h
test/: meson.build  process-asserts-test.c  process-comments-test.c  process-midscope-test.c
test/assert/: cast.c  commented.c  explicit_check.c  gconstpointer.c  gconstpointer.json  gerror.c  gerror.json  gerror_ok.c  gpointer.c  gpointer.json  missing.c  missing.json  rename.c  unused.c  unused_const.c
test/comment/: function_comments.c  function_comments.json  nested_struct.c  nested_struct.json  struct.c  struct.json
test/json/: diagnistic.json  didChange.json  didOpen.json  init.json
test/midscope/: complain.c  complain.json  new_scope.c  new_scope_complain.c  new_scope_complain.json
tools/: meson.build  print.c  run.c
